[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["rubakanaan <rubajkanaan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.7b0"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
